Move canonical generation into PostgreSQL native storage
